# francois

./: .gitignore  .mcp.json  .thumbnail  CLAUDE.md  Claude Terminal.dc.html  PIPELINE.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: gate-config.json  pipeline.json  settings.json
.claude/agents/: core.md  frontend.md
.claude/templates/: design-brief.md
.github/workflows/: ci.yml  release-main.yml  release.yml
contract/: agents-panel.ts  command-palette.ts  common.ts  conversation-view.ts  diff-view.ts  fleet-board.test.ts  fleet-board.ts  interactive-commands.ts  mcp-panel.ts  permission-guardrails.ts  session-engine.ts  session-questions.ts  sessions-sidebar.ts  shell-terminal.ts  skills-panel.ts  slash-menu.ts  usage-bar.ts  wsl-filesystem.test.ts  wsl-filesystem.ts
specs/: _template.md  agents-panel.md  app-shell.md  cli-companion.md  command-palette.md  conversation-view.md  diff-view.md  durable-sessions.md  fleet-board.md  interactive-commands.md  mcp-panel.md  notifications.md  permission-guardrails.md  session-brake.md  session-engine.md  session-questions.md  sessions-sidebar.md  shell-terminal.md  skills-panel.md  slash-menu.md  usage-bar.md  wsl-filesystem.md
src/: AgentsPanel.tsx  App.tsx  CommandCard.tsx  ConversationView.tsx  DiffView.tsx  MarkdownView.tsx  McpPanel.tsx  ModelPicker.tsx  NewSessionModal.tsx  PaletteView.tsx  PermissionCard.tsx  PermissionsModal.tsx  QuestionCard.tsx  ShellTerminal.tsx  Sidebar.tsx  SkillsPanel.tsx  SlashMenu.tsx  UsageBar.tsx  api.ts  conversation-blocks.test.ts  conversation-blocks.ts  main.tsx  markdown.test.ts  markdown.ts  palette.test.ts  palette.ts  paletteCommands.ts  paletteData.ts  permission-card.test.ts  permission-card.ts  permissions-editor.test.ts  permissions-editor.ts  question-card.test.ts  question-card.ts  shellStore.ts  slash-menu.test.ts  slash-menu.ts  store.ts  styles.css  theme.test.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diff.rs  ipc.rs  main.rs  permissions.rs  session.rs  usage.rs  wsl.rs
