[package]
name = "francois"
version = "0.1.0"
description = "Francois — Claude Code session orchestrator (preview)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
notify = "6"

[profile.release]
strip = true
lto = true
