[package]
name = "francois"
version = "0.7.0"
description = "Francois — Claude Code session orchestrator (preview)"
edition = "2021"
license = "AGPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order: serde_json::Map is a BTreeMap by default, so every surgical
# write of a user's settings.json would alphabetically REORDER all of its keys.
# permission-guardrails FR-14 promises to preserve what it does not touch, and a
# three-writer, hand-maintained file being reshuffled on the first "always allow"
# breaks that promise. Also stabilizes sessions.json and the transcript writes.
serde_json = { version = "1", features = ["preserve_order"] }
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
notify = "6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }

[profile.release]
strip = true
lto = true
